--- a/client/stylesheets/application.scss
+++ b/client/stylesheets/application.scss
@@ -1,3 +1,24 @@
 // application
 
-@import "project/default";
+// librarys
+@import "{wolves:bourbon}/bourbon";
+@import "{wolves:neat}/neat";
+
+// base
+@import "base/variables";
+@import "base/breakpoints";
+@import "base/grid";
+@import "base/normalize";
+@import "base/typography";
+@import "base/default";
+
+// layout
+@import "layout/header";
+@import "layout/main";
+@import "layout/section";
+
+// components
+@import "components/btn";
+@import "components/form";
+@import "components/logo";
+@import "components/nav";
