--- a/client/views/application/layout.html
+++ b/client/views/application/layout.html
@@ -1,10 +1,10 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800' rel='stylesheet' type='text/css'>
 </head>
 
 <template name="layout">
-  <div>
-    {{> yield}}
-  </div>
+  {{> yield}}
 </template>
