--- a/client/views/muscle/index.html
+++ b/client/views/muscle/index.html
@@ -1,28 +1,32 @@
 <template name="muscle">
   <header class="header">
-    <h1 class="header__title">Músculos</h1>
+    <div class="container">
+      <h1 class="header__title">Músculos</h1>
 
-    <a class="nav__btn nav--back ion-android-arrow-back" href="#"></a>
-    <a class="nav__btn nav--open ion-android-more-vertical" href="#"></a>
+      <a class="nav__btn nav--back ion-android-arrow-back" href="#"></a>
+      <a class="nav__btn nav--open ion-android-more-vertical" href="#"></a>
 
-    <nav class="nav">
-      <ul class="nav__list">
-        <li class="nav__item">
-          <a class="nav__link" href="/muscle/create">Adicionar</a>
-        </li>
-      </ul>
-    </nav>
+      <nav class="nav">
+        <ul class="nav__list">
+          <li class="nav__item">
+            <a class="nav__link" href="/muscle/create">Adicionar</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
   </header>
 
   <main class="main">
-    <ul class="list">
-      {{#each muscles}}
-      <li class="list__item">
-        <a class="list__link {{checkStatus status}}" href="/muscle/edit/{{_id}}">
-          {{name}}
-        </a>
-      </li>
-      {{/each}}
-    </ul>
+    <div class="container">
+      <ul class="list">
+        {{#each muscles}}
+        <li class="list__item">
+          <a class="list__link {{checkStatus status}}" href="/muscle/edit/{{_id}}">
+            {{name}}
+          </a>
+        </li>
+        {{/each}}
+      </ul>
+    </div>
   </main>
 </template>
