--- a/client/views/routine/show.html
+++ b/client/views/routine/show.html
@@ -1,35 +1,39 @@
 <template name="routineShow">
   <header class="header">
-    <h1 class="header__title">{{routine.description}}</h1>
+    <div class="container">
+      <h1 class="header__title">{{routine.description}}</h1>
 
-    <a class="nav__btn nav--back ion-android-arrow-back" href="#"></a>
+      <a class="nav__btn nav--back ion-android-arrow-back" href="#"></a>
 
-    {{#if admin}}
-    <a class="nav__btn nav--open ion-android-more-vertical" href="#"></a>
+      {{#if admin}}
+      <a class="nav__btn nav--open ion-android-more-vertical" href="#"></a>
 
-    <nav class="nav">
-      <ul class="nav__list">
-        <li class="nav__item">
-          <a class="nav__link" href="/routine/edit/{{_id}}">Editar</a>
-        </li>
+      <nav class="nav">
+        <ul class="nav__list">
+          <li class="nav__item">
+            <a class="nav__link" href="/routine/edit/{{_id}}">Editar</a>
+          </li>
 
-        <li class="nav__item">
-          <a class="nav__link" href="/routine-exercise/create/{{_id}}">Adicionar exercício</a>
-        </li>
-      </ul>
-    </nav>
-    {{/if}}
+          <li class="nav__item">
+            <a class="nav__link" href="/routine-exercise/create/{{_id}}">Adicionar exercício</a>
+          </li>
+        </ul>
+      </nav>
+      {{/if}}
+    </div>
   </header>
 
   <main class="main">
-    <ol class="list">
-      {{#each routine.exercisesObj}}
-        <li class="list__item">
-          <a class="list__link" href="/routine-exercise/show/{{_id}}">
-            {{exerciseObj.name}}
-          </a>
-        </li>
-      {{/each}}
-    </ol>
+    <div class="container">
+      <ol class="list">
+        {{#each routine.exercisesObj}}
+          <li class="list__item">
+            <a class="list__link" href="/routine-exercise/show/{{_id}}">
+              {{exerciseObj.name}}
+            </a>
+          </li>
+        {{/each}}
+      </ol>
+    </div>
   </main>
 </template>
