--- a/client/views/routine_exercise/create.html
+++ b/client/views/routine_exercise/create.html
@@ -1,36 +1,39 @@
 <template name="routineExerciseCreate">
   <header class="header">
-    <h1 class="header__title">Exercícios para rotina {{routine.description}}</h1>
-
-    <a class="nav__btn nav--back ion-android-arrow-back" href="#"></a>
+    <div class="container">
+      <h1 class="header__title">Exercícios para rotina {{routine.description}}</h1>
+      <a class="nav__btn nav--back ion-android-arrow-back" href="#"></a>
+    </div>
   </header>
 
   <main class="main">
-    <form class="form form--create" action="post">
-      <input type="hidden" id="routine" name="routine" value="{{routine._id}}">
+    <div class="container">
+      <form class="form form--create" action="post">
+        <input type="hidden" id="routine" name="routine" value="{{routine._id}}">
 
-      <div class="form__field">
-        <label class="form__label" for="name">Exercício</label>
-        <select class="form__select" name="exercise" id="exercise" required autofocus>
-          {{#each exercises}}
-            <option value="{{_id}}">{{name}}</option>
-          {{/each}}
-        </select>
-      </div>
+        <div class="form__field">
+          <label class="form__label" for="name">Exercício</label>
+          <select class="form__select" name="exercise" id="exercise" required autofocus>
+            {{#each exercises}}
+              <option value="{{_id}}">{{name}}</option>
+            {{/each}}
+          </select>
+        </div>
 
-      <div class="form__field">
-        <label class="form__label" for="sets">Séries</label>
-        <input class="form__input" type="number" id="sets" name="sets" required>
-      </div>
+        <div class="form__field">
+          <label class="form__label" for="sets">Séries</label>
+          <input class="form__input" type="number" id="sets" name="sets" required>
+        </div>
 
-      <div class="form__field">
-        <label class="form__label" for="reps">Repetições</label>
-        <input class="form__input" type="number" id="reps" name="reps" required>
-      </div>
+        <div class="form__field">
+          <label class="form__label" for="reps">Repetições</label>
+          <input class="form__input" type="number" id="reps" name="reps" required>
+        </div>
 
-      <div class="form__submit">
-        <input class="btn form__btn" type="submit" value="Cadastrar">
-      </div>
-    </form>
+        <div class="form__submit">
+          <input class="btn form__btn" type="submit" value="Cadastrar">
+        </div>
+      </form>
+    </div>
   </main>
 </template>
