--- a/client/views/training/index.html
+++ b/client/views/training/index.html
@@ -1,31 +1,35 @@
 <template name="training">
   <header class="header">
-    <h1 class="header__title">Treinamentos</h1>
+    <div class="container">
+      <h1 class="header__title">Treinamentos</h1>
 
-    <a class="nav__btn nav--back ion-android-arrow-back" href="#"></a>
+      <a class="nav__btn nav--back ion-android-arrow-back" href="#"></a>
 
-    {{#if admin}}
-    <a class="nav__btn nav--open ion-android-more-vertical" href="#"></a>
+      {{#if admin}}
+      <a class="nav__btn nav--open ion-android-more-vertical" href="#"></a>
 
-    <nav class="nav">
-      <ul class="nav__list">
-        <li class="nav__item">
-          <a class="nav__link" href="/training/create">Adicionar</a>
-        </li>
-      </ul>
-    </nav>
-    {{/if}}
+      <nav class="nav">
+        <ul class="nav__list">
+          <li class="nav__item">
+            <a class="nav__link" href="/training/create">Adicionar</a>
+          </li>
+        </ul>
+      </nav>
+      {{/if}}
+    </div>
   </header>
 
   <main class="main">
-    <ul class="list">
-      {{#each trainings}}
-      <li class="list__item">
-        <a class="list__link {{checkStatus status}}" href="/training/show/{{_id}}">
-          {{description}}
-        </a>
-      </li>
-      {{/each}}
-    </ul>
+    <div class="container">
+      <ul class="list">
+        {{#each trainings}}
+        <li class="list__item">
+          <a class="list__link {{checkStatus status}}" href="/training/show/{{_id}}">
+            {{description}}
+          </a>
+        </li>
+        {{/each}}
+      </ul>
+    </div>
   </main>
 </template>
