--- a/client/views/user/profile.html
+++ b/client/views/user/profile.html
@@ -1,17 +1,21 @@
 <template name="userProfile">
   <header class="header">
-    <h1 class="header__title">Perfil</h1>
+    <div class="container">
+      <h1 class="header__title">Perfil</h1>
+    </div>
   </header>
 
   <main class="main">
-    <section class="section">
-      <h2 class="section__title">{{ user.name }}</h2>
+    <div class="container">
+      <section class="section">
+        <h2 class="section__title">{{ user.name }}</h2>
 
-      <div class="section__text">
-        <p>
-          <strong>Tipo</strong>: {{ user.type }}
-        </p>
-      </div>
-    </section>
+        <div class="section__text">
+          <p>
+            <strong>Tipo</strong>: {{ user.type }}
+          </p>
+        </div>
+      </section>
+    </div>
   </main>
 </template>
