--- a/client/views/prop/create.html
+++ b/client/views/prop/create.html
@@ -2,7 +2,7 @@
   <header class="header">
     <div class="container">
       <h1 class="header__title">Novo adereço/equipamento</h1>
-      <a class="nav__btn nav--back ion-android-arrow-back" href="#"></a>
+      <a class="nav-action__btn nav-action--back ion-android-arrow-back" href="#"></a>
     </div>
   </header>
 
