--- a/client/views/prop/index.html
+++ b/client/views/prop/index.html
@@ -3,16 +3,16 @@
     <div class="container">
       <h1 class="header__title">Adereços/equipamentos</h1>
 
-      <a class="nav__btn nav--back ion-android-arrow-back" href="#"></a>
-      <a class="nav__btn nav--open ion-android-more-vertical" href="#"></a>
+      <a class="nav-action__btn nav-action--back ion-android-arrow-back" href="#"></a>
+      <a class="nav-action__btn nav-action--open ion-android-more-vertical" href="#"></a>
 
-      <nav class="nav">
-        <ul class="nav__list">
-          <li class="nav__item">
-            <a class="nav__link" href="/prop/create">Adicionar</a>
+      <div class="nav-action">
+        <ul class="nav-action__list">
+          <li class="nav-action__item">
+            <a class="nav-action__link" href="/prop/create">Adicionar</a>
           </li>
         </ul>
-      </nav>
+      </div>
     </div>
   </header>
 
