--- a/client/views/routine/show.html
+++ b/client/views/routine/show.html
@@ -3,22 +3,22 @@
     <div class="container">
       <h1 class="header__title">{{routine.description}}</h1>
 
-      <a class="nav__btn nav--back ion-android-arrow-back" href="#"></a>
+      <a class="nav-action__btn nav-action--back ion-android-arrow-back" href="#"></a>
 
       {{#if admin}}
-      <a class="nav__btn nav--open ion-android-more-vertical" href="#"></a>
+      <a class="nav-action__btn nav-action--open ion-android-more-vertical" href="#"></a>
 
-      <nav class="nav">
-        <ul class="nav__list">
-          <li class="nav__item">
-            <a class="nav__link" href="/routine/edit/{{_id}}">Editar</a>
+      <div class="nav-action">
+        <ul class="nav-action__list">
+          <li class="nav-action__item">
+            <a class="nav-action__link" href="/routine/edit/{{_id}}">Editar</a>
           </li>
 
-          <li class="nav__item">
-            <a class="nav__link" href="/routine-exercise/create/{{_id}}">Adicionar exercício</a>
+          <li class="nav-action__item">
+            <a class="nav-action__link" href="/routine-exercise/create/{{_id}}">Adicionar exercício</a>
           </li>
         </ul>
-      </nav>
+      </div>
       {{/if}}
     </div>
   </header>
