--- a/client/views/application/layout.html
+++ b/client/views/application/layout.html
@@ -6,5 +6,18 @@
 </head>
 
 <template name="layout">
+  <a class="nav__btn nav--open ion-navicon" href="#"></a>
+
+  <nav class="nav">
+    <ul class="nav__list">
+      <li class="nav__item">
+        <a class="nav__link" href="/prop">Acessórios/Equipamentos</a>
+        <a class="nav__link" href="/muscle">Músculos</a>
+        <a class="nav__link" href="/exercise">Exercícios</a>
+        <a class="nav__link" href="/training">Treinamentos</a>
+      </li>
+    </ul>
+  </nav>
+
   {{> yield}}
 </template>
