Refactoring initial structure and comporting to nav

--- a/client/views/routine/index.html
+++ b/client/views/routine/index.html
@@ -3,7 +3,8 @@
     <div class="container">
       <h1 class="header__title">Rotinas</h1>
 
-      <a class="nav-action__btn nav-action--back ion-android-arrow-back" href="#"></a>
+      {{> nav}}
+      
       <a class="nav-action__btn nav-action--open ion-android-more-vertical" href="#"></a>
 
       <div class="nav-action">
