Adding styles for header and navegation

--- a/client/stylesheets/base/_variables.scss
+++ b/client/stylesheets/base/_variables.scss
@@ -4,9 +4,7 @@ $white: #fff;
 $black: #111;
 
 // project
-$family-body: 'Open Sans', sans-serif;
-$family-title: 'Open Sans', sans-serif;
+$family-body: 'Lato', sans-serif;
+$family-title: 'Lato', sans-serif;
 
-$primary: #96c11f;
-$secondary: #0f4871;
-$tertiary: #3c3c3b;
+$primary: #a52b31;
