--- a/client/stylesheets/components/_logo.scss
+++ b/client/stylesheets/components/_logo.scss
@@ -1,9 +1,12 @@
 // logo
 
 .logo {
+  text-align: center;
 
+  margin: 0;
+  padding: 2rem 0 1rem;
 }
 
-.logo__link {
-
+.logo__image {
+  max-width: 9rem;
 }
