--- a/client/views/application/nav.html
+++ b/client/views/application/nav.html
@@ -1,12 +1,25 @@
 <template name="nav">
-  <a class="nav__btn nav--open ion-navicon" href="#"></a>
+  <a class="nav__btn nav__btn--left nav__btn--open ion-navicon" href="#"></a>
 
   <nav class="nav">
+    <h1 class="logo">
+      <img class="logo__image" src="img/logo.png" alt="Coach">
+    </h1>
+
     <ul class="nav__list">
       <li class="nav__item">
         <a class="nav__link" href="/prop">Equipamentos</a>
+      </li>
+
+      <li class="nav__item">
         <a class="nav__link" href="/muscle">Músculos</a>
+      </li>
+
+      <li class="nav__item">
         <a class="nav__link" href="/exercise">Exercícios</a>
+      </li>
+
+      <li class="nav__item">
         <a class="nav__link" href="/training">Treinamentos</a>
       </li>
     </ul>
