--- a/client/views/exercise/index.html
+++ b/client/views/exercise/index.html
@@ -5,7 +5,7 @@
 
       {{> nav}}
 
-      <a class="nav-action__btn nav-action--open ion-android-more-vertical" href="#"></a>
+      <a class="nav__btn nav__btn--right nav-action__btn--open ion-android-more-vertical" href="#"></a>
 
       <div class="nav-action">
         <ul class="nav-action__list">
