--- a/client/views/muscle/create.html
+++ b/client/views/muscle/create.html
@@ -2,7 +2,7 @@
   <header class="header">
     <div class="container">
       <h1 class="header__title">Novo músculo</h1>
-      <a class="nav-action__btn nav-action--back ion-android-arrow-back" href="#"></a>
+      <a class="nav__btn nav__btn--left btn--back ion-android-arrow-back" href="#"></a>
     </div>
   </header>
 
