--- a/client/views/prop/create.html
+++ b/client/views/prop/create.html
@@ -1,8 +1,8 @@
 <template name="propCreate">
   <header class="header">
     <div class="container">
-      <h1 class="header__title">Novo adereço/equipamento</h1>
-      <a class="nav-action__btn nav-action--back ion-android-arrow-back" href="#"></a>
+      <h1 class="header__title">Novo equipamento</h1>
+      <a class="nav__btn nav__btn--left btn--back ion-android-arrow-back" href="#"></a>
     </div>
   </header>
 
