--- a/client/views/prop/edit.html
+++ b/client/views/prop/edit.html
@@ -1,10 +1,10 @@
 <template name="propEdit">
   <header class="header">
     <div class="container">
-      <h1 class="header__title">Alterar adereço/equipamento</h1>
+      <h1 class="header__title">Alterar equipamento</h1>
 
-      <a class="nav-action__btn nav-action--back ion-android-arrow-back" href="#"></a>
-      <a class="nav-action__btn nav-action--open ion-android-more-vertical" href="#"></a>
+      <a class="nav__btn nav__btn--left btn--back ion-android-arrow-back" href="#"></a>
+      <a class="nav__btn nav__btn--right nav-action__btn--open ion-android-more-vertical" href="#"></a>
 
       <div class="nav-action">
         <ul class="nav-action__list">
