--- a/client/views/prop/index.html
+++ b/client/views/prop/index.html
@@ -1,11 +1,11 @@
 <template name="prop">
   <header class="header">
     <div class="container">
-      <h1 class="header__title">Adereços/equipamentos</h1>
+      <h1 class="header__title">Equipamentos</h1>
 
       {{> nav}}
 
-      <a class="nav-action__btn nav-action--open ion-android-more-vertical" href="#"></a>
+      <a class="nav__btn nav__btn--right nav-action__btn--open ion-android-more-vertical" href="#"></a>
 
       <div class="nav-action">
         <ul class="nav-action__list">
