--- a/client/stylesheets/components/_nav.scss
+++ b/client/stylesheets/components/_nav.scss
@@ -1,11 +1,61 @@
 // nav
 
 .nav {
-  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 200;
+
+  width: 100%;
+  height: 100vh;
+
+  @include transform(translateY(-100%));
+  @include transition(.2s ease);
+
+  background: $primary;
+
+  overflow-y: scroll;
 }
 
 .nav--opened {
-  display: block;
+  overflow: hidden;
+  height: 100%;
+
+  .nav {
+    @include transform(translateY(0));
+    z-index: 400;
+  }
+
+  .nav__btn--open {
+    z-index: 500;
+  }
+
+  body {
+    overflow: hidden;
+  }
+}
+
+.nav__btn {
+  display: inline-block;
+  width: 3rem;
+  height: 3rem;
+  line-height: 3rem;
+
+  color: $white;
+  font-size: 1.4rem;
+  text-align: center;
+}
+
+.nav__btn--left {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.nav__btn--right {
+  position: absolute;
+  top: 0;
+  right: 0;
 }
 
 .nav__list {
@@ -17,11 +67,25 @@
 }
 
 .nav__item {
+  margin: .2rem 0;
 
+  &:last-of-type {
+    margin-bottom: 0;
+  }
 }
 
 .nav__link {
+  display: block;
+  line-height: 4rem;
 
+  color: $white;
+  font-size: 1rem;
+  font-weight: 600;
+  text-align: center;
+  text-decoration: none;
+  text-transform: uppercase;
+
+  background: rgba($black, .1);
 }
 
 .nav__link--active {
@@ -32,9 +96,57 @@
 // nav actions
 
 .nav-action {
-  display: none;
+  position: absolute;
+  top: 3rem;
+  right: 0;
+  z-index: 200;
+
+  width: 100%;
+
+  @include transform(translateX(-100%));
+  @include transition(.2s ease);
+
+  background: $white;
 }
 
 .nav-action--opened {
+  .nav-action {
+    @include transform(translateX(0));
+  }
+
+  .nav-action__btn--open {
+    z-index: 300;
+  }
+
+  body {
+    overflow: hidden;
+  }
+}
+
+.nav-action__list {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.nav-action__item {
+  margin: .2rem 0;
+
+  &:last-of-type {
+    margin-bottom: 0;
+  }
+}
+
+.nav-action__link {
   display: block;
+  line-height: 4rem;
+
+  color: lighten($black, 30%);
+  font-size: 1rem;
+  font-weight: 600;
+  text-align: center;
+  text-decoration: none;
+  text-transform: uppercase;
+
+  background: rgba($black, .1);
 }
