--- a/client/views/routine/edit.html
+++ b/client/views/routine/edit.html
@@ -3,11 +3,11 @@
     <div class="container">
       <h1 class="header__title">Alterar rotina</h1>
 
-      <a class="nav-action__btn nav-action--back ion-android-arrow-back" href="#"></a>
-      <a class="nav-action__btn nav-action--open ion-android-more-vertical" href="#"></a>
+      <a class="nav__btn nav__btn--left btn--back ion-android-arrow-back" href="#"></a>
+      <a class="nav__btn nav__btn--right nav-action__btn--open ion-android-more-vertical" href="#"></a>
 
-      <div class="nav">
-        <ul class="nav__list">
+      <div class="nav-action">
+        <ul class="nav-action__list">
           {{#if routine.status}}
             <li class="nav-action__item">
               <a class="nav-action__link btn--status" href="#">Desativar</a>
