--- a/client/views/routine/show.html
+++ b/client/views/routine/show.html
@@ -3,10 +3,10 @@
     <div class="container">
       <h1 class="header__title">{{routine.description}}</h1>
 
-      <a class="nav-action__btn nav-action--back ion-android-arrow-back" href="#"></a>
+      <a class="nav__btn nav__btn--left btn--back ion-android-arrow-back" href="#"></a>
 
       {{#if admin}}
-      <a class="nav-action__btn nav-action--open ion-android-more-vertical" href="#"></a>
+      <a class="nav__btn nav__btn--right nav-action__btn--open ion-android-more-vertical" href="#"></a>
 
       <div class="nav-action">
         <ul class="nav-action__list">
