--- a/client/views/routine_exercise/create.html
+++ b/client/views/routine_exercise/create.html
@@ -2,7 +2,7 @@
   <header class="header">
     <div class="container">
       <h1 class="header__title">Exercícios para rotina {{routine.description}}</h1>
-      <a class="nav-action__btn nav-action--back ion-android-arrow-back" href="#"></a>
+      <a class="nav__btn nav__btn--left btn--back ion-android-arrow-back" href="#"></a>
     </div>
   </header>
 
