--- a/client/stylesheets/base/_typography.scss
+++ b/client/stylesheets/base/_typography.scss
@@ -9,6 +9,6 @@ $titles: h1, h2, h3, h4, h5, h6;
     font-weight: 600;
     text-transform: uppercase;
 
-    margin: 0 0 10px;
+    margin: 0 0 1rem;
   }
 }
