--- a/client/stylesheets/components/_btn.scss
+++ b/client/stylesheets/components/_btn.scss
@@ -1,10 +1,33 @@
 // btn
 
 .btn {
-  display: inline-block;
+  display: block;
+  width: 100%;
+  height: 3.5rem;
+  line-height: 3.5rem;
+
+  color: $white;
+  font-size: 1rem;
+  font-weight: 600;
+  text-align: center;
+  text-decoration: none;
+  text-transform: uppercase;
+
+  border: 0;
+  background: $primary;
+
+  @include transition(.1s ease);
 
   &:hover,
   &:focus {
+    background: darken($primary, 10%);
+  }
+}
 
+
+@include media($screen-md) {
+  .btn {
+    height: 4rem;
+    line-height: 4rem;
   }
 }
