Adding favicon and page for loading

--- a/client/stylesheets/application.scss
+++ b/client/stylesheets/application.scss
@@ -22,5 +22,6 @@
 @import "components/btn";
 @import "components/form";
 @import "components/list";
+@import "components/loading";
 @import "components/logo";
 @import "components/nav";
