--- a/client/views/application/loading.html
+++ b/client/views/application/loading.html
@@ -1,3 +1,8 @@
 <template name="loading">
-  Carregando...
+  <div class="loading">
+    <div class="loading__content">
+      <img class="loading__logo" src="img/logo.png" alt="Coach">
+      <span class="loading__icon"></span>
+    </div>
+  </div>
 </template>
