--- a/client/views/user/login.html
+++ b/client/views/user/login.html
@@ -23,8 +23,10 @@
         </div>
       </form>
 
-      <a class="btn btn--full" href="/register">Registrar</a>
-      <a class="btn btn--full" href="/recovery">Esqueci minha senha</a>
+      <div class="form__links">
+        <a href="/register">Registrar</a>
+        <a href="/recovery">Esqueci minha senha</a>
+      </div>
     </div>
   </main>
 </template>
