--- a/client/views/user/recovery.html
+++ b/client/views/user/recovery.html
@@ -30,6 +30,10 @@
           </div>
         </form>
       {{/if}}
+
+      <div class="form__links">
+        <a href="/login">Entrar</a>
+      </div>
     </div>
   </main>
 </template>
