--- a/client/views/user/register.html
+++ b/client/views/user/register.html
@@ -28,7 +28,9 @@
         </div>
       </form>
 
-      <a class="btn btn--full" href="/login">Entrar</a>
+      <div class="form__links">
+        <a href="/login">Entrar</a>
+      </div>
     </div>
   </main>
 </template>
