--- a/client/stylesheets/components/_nav.scss
+++ b/client/stylesheets/components/_nav.scss
@@ -44,6 +44,13 @@
   color: $white;
   font-size: 1.4rem;
   text-align: center;
+
+  @include transition(.15s ease);
+
+  &:hover,
+  &:focus {
+    background: rgba($black, .2);
+  }
 }
 
 .nav__btn--left {
