--- a/client/stylesheets/components/_nav.scss
+++ b/client/stylesheets/components/_nav.scss
@@ -37,9 +37,9 @@
 
 .nav__btn {
   display: inline-block;
-  width: 3rem;
-  height: 3rem;
-  line-height: 3rem;
+  width: 3.5rem;
+  height: 3.5rem;
+  line-height: 3.5rem;
 
   color: $white;
   font-size: 1.4rem;
@@ -110,22 +110,23 @@
 // nav actions
 
 .nav-action {
-  position: absolute;
-  top: 3rem;
+  position: fixed;
+  top: 0;
   right: 0;
   z-index: 200;
 
   width: 100%;
+  height: 100vh;
 
-  @include transform(translateX(-100%));
+  @include transform(translateY(-100%));
   @include transition(.2s ease);
 
-  background: lighten($black, 25%);
+  background: none;
 }
 
 .nav-action--opened {
   .nav-action {
-    @include transform(translateX(0));
+    @include transform(translateY(0));
   }
 
   .nav-action__btn--open {
@@ -145,7 +146,7 @@
 
 .nav-action__item {
   line-height: 3.5rem;
-  border-bottom: solid 2px rgba($black, .06);
+  border-bottom: solid 2px lighten($black, 30%);
 
   &:last-of-type {
     border: 0;
@@ -161,6 +162,8 @@
   text-align: center;
   text-decoration: none;
   text-transform: uppercase;
+
+  background: lighten($black, 25%);
 }
 
 
@@ -181,7 +184,7 @@
 
 
   .nav-action {
-    top: 4rem;
+
   }
 
   .nav-action__item {
