--- a/client/stylesheets/layout/_main.scss
+++ b/client/stylesheets/layout/_main.scss
@@ -1,11 +1,11 @@
 // main
 
 .main {
-  padding: 4rem 0 5rem;
+  padding: 5rem 0;
 }
 
 @include media($screen-md) {
   .main {
-    padding: 6rem 0 7rem;
+    padding: 5.5rem 0;
   }
 }
