--- a/client/views/application/loading.html
+++ b/client/views/application/loading.html
@@ -1,7 +1,7 @@
 <template name="loading">
   <div class="loading">
     <div class="loading__content">
-      <img class="loading__logo" src="img/logo.png" alt="Coach">
+      <img class="loading__logo" src="img/logo.svg" alt="Coach">
       <span class="loading__icon"></span>
     </div>
   </div>
