--- a/client/views/routine/show.html
+++ b/client/views/routine/show.html
@@ -32,7 +32,7 @@
       </ol>
 
       <footer class="footer">
-        <a class="btn" href="/routine-exercise/create/{{_id}}">Adicionar</a>
+        <a class="btn" href="/routine-exercise/create/{{_id}}">Adicionar Exercício</a>
       </footer>
     </div>
   </main>
