--- a/client/views/training/index.html
+++ b/client/views/training/index.html
@@ -21,7 +21,7 @@
 
       {{#if admin}}
       <footer class="footer">
-        <a class="btn" href="/training/create">Adicionar</a>
+        <a class="btn" href="/training/create">Adicionar Treinamento</a>
       </footer>
       {{/if}}
     </div>
