--- a/client/views/training/show.html
+++ b/client/views/training/show.html
@@ -32,7 +32,7 @@
       </ol>
 
       <footer class="footer">
-        <a class="btn" href="/routine/create/{{_id}}">Adicionar</a>
+        <a class="btn" href="/routine/create/{{_id}}">Adicionar Rotina</a>
       </footer>
     </div>
   </main>
