--- a/client/stylesheets/components/_form.scss
+++ b/client/stylesheets/components/_form.scss
@@ -9,20 +9,21 @@
 }
 
 .form__label {
+  display: block;
+
   color: lighten($black, 40%);
   font-family: $family-title;
   font-size: .8rem;
   font-weight: 500;
   text-transform: uppercase;
 
-  margin: 0 0 1rem;
+  margin: 0 0 .25rem;
 }
 
 %field {
   display: block;
   width: 100%;
   height: 3rem;
-  line-height: 3rem;
 
   color: lighten($black, 30%);
   font-family: $family-title;
@@ -43,15 +44,18 @@
 
 .form__input {
   @extend %field;
+  line-height: 3rem;
   @include appearance(none);
 }
 
 .form__select {
   @extend %field;
+  line-height: 2rem;
   @include appearance(none);
 }
 
 .form__textarea {
+  line-height: 2rem;
   @extend %field;
 }
 
