--- a/client/views/application/nav.html
+++ b/client/views/application/nav.html
@@ -3,7 +3,7 @@
 
   <nav class="nav">
     <h1 class="logo">
-      <img class="logo__image" src="img/logo.png" alt="Coach">
+      <img class="logo__image" src="img/logo.svg" alt="Coach">
     </h1>
 
     <ul class="nav__list">
